# viewer

./: Batch.txt  CMakeLists.txt  CMakeLists.txt~  MatlabEng.h  README  cmake_install.cmake  console_color.h  glviewer.cpp  glviewer.cpp.dos  glviewer.h  hello_correct  main.cpp  moc_Histogram.cxx  moc_glviewer.cxx  moc_window.cxx  random.h  randomWalk.h  simulation.sh  the_fuq_is_this_window_ui  ui_window.h  ui_window.h~  viewer  viewer.files  viewer.includes  window.cpp  window.cpp~  window.h  window.h~  window.ui
build_gdb/: CMakeCache.txt  Makefile  cmake_install.cmake  moc_glviewer.cxx  moc_window.cxx  ui_window.h  viewer
build_m32/: CMakeCache.txt  Makefile  cmake_install.cmake  moc_glviewer.cxx  moc_window.cxx  ui_window.h
